--- a/ToDoList/todos.css
+++ b/ToDoList/todos.css
@@ -1,10 +1,71 @@
+body {
+    background: #005aa7; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #005aa7, #fffde4); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #005aa7, #fffde4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    font-family: "Roboto";
+}
+
 .container {
     width: 360px;
-    margin: 0 auto;
-    background: teal;
+    margin: 100px auto;
+    box-shadow: 1px 1px rgba(0, 0, 0, 0.1);
+}
+
+h1 {
+    width: 100%;
+    margin: 0;
+    padding: 5px 18px;
+    box-sizing: border-box;
+    background: rgb(66, 93, 212);
+
+    text-transform: uppercase;
+    color: white;
+    letter-spacing: 1px;
+    font-weight: normal;
+    font-size: 25px;
+    height: 50px;
+    line-height: 40px;
+}
+
+input {
+    width: 100%;
+    height: 45px;
+    border: 2px solid rgba(247, 247, 247, 0);
+    outline: none;
+    box-sizing: border-box;
+    background: #f7f7f7;
+    padding-left: 20px;
+    font-size: 20px;
+    transition: all 0.2s;
+}
+
+input:hover {
+    border: 2px solid rgb(66, 93, 212);
+}
+
+input:focus {
+    border: 2px solid rgb(66, 93, 212);
+}
+
+ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+li {
+    padding: 5px 18px;
+    height: 25px;
+    line-height: 25px;
+    font-size: 14px;
+    background: white;
+}
+
+li:nth-of-type(2n) {
+    background: #f7f7f7;
 }
 
 .completed {
-    color: red;
+    color: gray;
     text-decoration: line-through;
 }
