[MiniBlog] Completed all RESTFUL routes.

--- a/MiniBlog/views/index.ejs
+++ b/MiniBlog/views/index.ejs
@@ -7,6 +7,7 @@
         <p><%= blog.content %></p>
         <img src="<%= blog.image %>">
         <p><%= blog.date %></p>
+        <p><a href="/blogs/<%= blog._id %>">CLICK ME TO READ MORE</a></p>
     <% }) %>
 
 
