--- a/MiniBlog/views/edit.ejs
+++ b/MiniBlog/views/edit.ejs
@@ -2,6 +2,17 @@
     
 
     <h1>This is the EDIT page here!!</h1>
+    <form action="/blogs/<%= blog._id%>?_method=PUT" method="POST">
+        <div>
+            <label for="title">Title:</label>
+            <input type="text" id="title" name="updatedBlog[title]" value="<%= blog.title %>">
+        </div>
+        <div>
+            <label for="content">Content:</label>
+            <input type="text" id="content" name="updatedBlog[content]" value="<%= blog.content %>">
+        </div>
+        <input type="submit">
+    </form>
 
 
 <%- include('partials/footer.ejs') %>
