--- a/MiniBlog/views/edit.ejs
+++ b/MiniBlog/views/edit.ejs
@@ -1,18 +1,28 @@
 <%- include('partials/header.ejs') %>
-    
 
-    <h1>This is the EDIT page here!!</h1>
-    <form action="/blogs/<%= blog._id%>?_method=PUT" method="POST">
-        <div>
-            <label for="title">Title:</label>
-            <input type="text" id="title" name="updatedBlog[title]" value="<%= blog.title %>">
+    <div class="container">
+        <div class="inner container">
+            <div class="card border-info">
+                <div class="card-body">
+                    <h1>Edit Post</h1>
+                    <form action="/blogs/<%= blog._id%>?_method=PUT" method="POST">
+                        <div class="form-group">
+                            <label>Title</label>
+                            <input type="text" class="form-control" name="updatedBlog[title]" value="<%= blog.title %>" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Image source</label>
+                            <input type="text" class="form-control" name="updatedBlog[image]" value="<%= blog.image %>" required>
+                        </div>
+                        <div class="form-group">
+                            <label>Content</label>
+                            <textarea type="text" class="form-control"  rows="6" name="updatedBlog[content]" required><%= blog.content %></textarea>
+                        </div>
+                        <button type="submit" class="submit-btn btn btn-primary">Submit</button>
+                    </form>
+                </div>
+            </div>
         </div>
-        <div>
-            <label for="content">Content:</label>
-            <input type="text" id="content" name="updatedBlog[content]" value="<%= blog.content %>">
-        </div>
-        <input type="submit">
-    </form>
-
+    </div>
 
 <%- include('partials/footer.ejs') %>
