--- a/MiniBlog/views/index.ejs
+++ b/MiniBlog/views/index.ejs
@@ -1,14 +1,35 @@
 <%- include('partials/header.ejs') %>
-    
 
-    <h1>This is the INDEX page here!!</h1>
-    <% blogs.forEach(function(blog) { %>
-        <p><%= blog.title %></p>
-        <p><%= blog.content %></p>
-        <img src="<%= blog.image %>">
-        <p><%= blog.date %></p>
-        <p><a href="/blogs/<%= blog._id %>">CLICK ME TO READ MORE</a></p>
-    <% }) %>
-
+    <div class="container">
+        <h1 class="starting-h1">Nature's Blog</h1>
+        <div class="inner container">
+            <% if(blogs.length === 0) { %>
+                <div class="card border-info">
+                    <div class="card-body">
+                        This blog is empty at the moment.
+                    </div>
+                </div>
+            <% } %>
+            <% blogs.forEach(function(blog) { %>
+                <div class="card border-info">
+                    <div class="card-body">
+                        <div class="media">
+                            <img src="<%= blog.image %>" class="mr-4 img-thumbnail">
+                            <div class="media-body">
+                                <div class="blog-title"><%= blog.title %></div>
+                                <div class="blog-date"><%= blog.date.toDateString() %></div>
+                                <div class="blog-content"><%= blog.content.substring(0, 200) %>
+                                    <% if(blog.content.length > 200) { %>
+                                        ...
+                                    <% } %>
+                                </div>
+                                <a class="readmore-btn btn btn-outline-primary btn-sm" href="/blogs/<%= blog._id %>">READ MORE</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            <% }) %>
+        </div>
+    </div>
 
 <%- include('partials/footer.ejs') %>
