--- a/MiniBlog/views/partials/header.ejs
+++ b/MiniBlog/views/partials/header.ejs
@@ -5,6 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Mini Blog</title>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,700" rel="stylesheet">
+    <link rel="stylesheet" href="/app.css">
+
 </head>
 <body>
-    <p> -------------------------------------- </p>
+
+    <nav class="navbar navbar-dark navbar-expand-md fixed-top" style="background-color: rgb(168, 70, 70);">
+        <div class="container">
+            <div class="navbar-brand"><i class="far fa-bookmark"></i></div>  
+            <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#hamburger-stuff"><span class="navbar-toggler-icon"></span></button>
+                
+            <div class="collapse navbar-collapse" id="hamburger-stuff">
+                <ul class="navbar-nav">
+                    <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/blogs/new">New Post</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
