--- a/D3SVGTutorial/style.css
+++ b/D3SVGTutorial/style.css
@@ -31,18 +31,13 @@ body {
   
   #letters {
     margin: 20px auto 0;
-    width: 800px;
   }
   
-  .letter {
-    display: inline-block;
-    text-align: center;
-    background-color: #ffc800;
-    vertical-align: bottom;
+  .letter rect {
+    fill: #ffc800;
   }
   
-  .new {
-    font-size: 1.5em;
-    color: #ffffff;
+  .new rect {
+    fill: #00ff00;
   }
   
